linkding/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding-deployment
  labels:
    app: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding 
    spec:
      containers:
      - name: linkding
        image: sissbruecker/linkding:1.44.1-plus-alpine
        ports:
        - containerPort: 9090
        volumeMounts:
        - mountPath: /etc/linkding/data
          name: mypd
      volumes:
      - name: mypd
        persistentVolumeClaim:
          claimName: mypvc
