linkding/linkding-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
spec:
  selector:
    app: linkding
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
  type: ClusterIP
